css/styles.css
@font-face {
    font-family: ClanOTBlack;
    src: url("asset/font/FF_Clan_OT_Black.otf") format("opentype");
}

@font-face {
    font-family: ClanOTBold;
    src: url("asset/font/FF_Clan_OT_Bold.otf") format("opentype");
}

@font-face {
    font-family: ClanOTNews;
    src: url("asset/font/FF_Clan_OT_News.otf") format("opentype");
}

:root {
	--bleuclair: rgb(0, 146, 212);
	--bleu: rgb(3, 55, 140);
	--bleufonce: rgb(30, 43, 103);
	--rouge: rgb(208, 46, 38);
	--rougefonce: rgb(151, 35, 24);
	--gris: rgb(198, 198, 197);
	--jaune: rgb(245, 120, 0);
	--violet: rgb(90, 35, 130);
	--vert: rgb(140, 155, 30);
}

*{
	margin: 0;
	padding: 0;
}

html, body {
	height: 100%;
	width:100%;
	font-family: ClanOTNews;
	display: flex;
}

/*Navbar Style*/

nav {
	z-index: 10;
	background-color: white;
	position: fixed;
	display: flex;
	justify-content: space-between;
	top: 0;
	left: 0;
	width: 100%;
	height: 70px;
	border-bottom-style: solid;
	border-bottom-color: var(--bleuclair);
}

nav .logo {
	overflow: hidden;
	height:100%;
	padding-left: 0.7%;
}

nav .logo img{
	display: block;
	max-height:100%;
}

nav ul {
	display: none;
}

nav li {
	display: flex;
	height: 100%;
	float: right;
	text-align: center;
}

nav li a {
	text-decoration: none;
	padding: 0px 25px;
	display: flex;
	align-items: center;
	color: white;
}	

nav li .red {
	color: var(--rouge);
}

nav .current {
	border-bottom-style: solid;
	border-bottom-color: var(--bleuclair);
	font-weight: bold;
}

nav .bars {
	display: flex;
	width: 70px;
}


nav .bars img {
	height: 100%;
	padding-bottom: 3px;
}

#navBar.responsive {
	z-index: 20;
	display: flex;
	position: absolute;
	flex-direction: column;
	align-items: end;
	top: 100%;
	width: 100%;
	background-color: var(--bleufonce);
}

#navBar.responsive li {
	padding: 5px 0px;
}

/* Main padding navbar*/
.main {
	margin-top: 70px;
}

/*Home Style*/
.homeMain{
	width: 100%;
	display: flex;
	justify-content: center;
}

#base_presentation{
	padding: 5px 5px;
	color: black;
}

#base_presentation h1{
	font-family: ClanOTBlack;
	text-align: center;
}

#base_presentation p{
	text-align: justify;
}

#base_logos {
	display: flex;
}

#base_logos img{
	width:50%;
}

/*Mission Style*/

.missionMain {
	width: 100%;
	display: flex;
	justify-content: center;
}

.missionMain ul{
	padding-top: 15px;
	list-style: none;
	width: 100%;
}

.category{
	width: 100%;
	margin-bottom: 20px;
}

.category h2{
	font-family: ClanOTBold;
	color: var(--bleuclair);
	text-align: center;
	border-bottom-style: solid;
	border-bottom-color: var(--rouge);
}

.subCategory{
	text-align: justify;
	list-style: none;
}

.subCategory li {
	padding: 10px 5px;
	border-bottom-style: solid;
	border-bottom-color: var(--bleuclair);
	border-bottom-width: 1px;
}

/*Club Style*/

#map {
	flex: 3;
	fill: var(--gris);
	stroke: white;
	stroke-width: 6;
	stroke-linecap: square;
	stroke-linejoin: bevel
}

#map circle {
	stroke: white;
	stroke-width: 2;
	fill: var(--bleufonce);
}

.map-city {
	stroke: none;
	fill: var(--bleufonce);
	font-size: 3em;
	font-family: ClanOTNews;
	font-weight: bold;
}

.map-club path {
	fill: var(--rouge);
	cursor: pointer;
}

.map-club path:hover {
	fill: var(--rougefonce);
}

.tooltip {
	visibility: hidden;
    stroke: none;
	fill: var(--gris);
    font-size: 5em;
    font-family: ClanOTBlack;
}

path:hover + .tooltip {
    visibility: visible;
}

.right_pane {
	flex: 2;
	height: 100%;
	display: flex;
	flex-direction: column;
}

.card_club {
	display: none;
	flex: 1;	
	background-color: white;
}

.container {
	padding: 10px 16px;
	flex: 2;
}

.container h2 {
	color: var(--bleuclair);
	font-family: ClanOTBold;
	margin: 10px 0px;
}

.container a {
	color: var(--rouge);
	text-decoration: none;
}

.container p {
	margin: 5px 0px;
}

.siteweb:after {
	content: "";
	display: block;
	background: url("asset/icon/external-link-alt-solid.svg") no-repeat;
	width: 20px;
	height: 20px;
	float: left;
	margin: 0 6px 0 0;
}

.club_logo {
	flex: 3;
	position: relative;
	overflow: hidden;
}

.club_logo img{
	position: absolute;
	max-width:100%;
	max-height:100%;
	top:-100%; left:0; right: 0; bottom:-100%;
	margin: auto;
}

#mapid {
	display: none;
	flex: 1;
}

@media only screen and (min-width: 1025px) {

	nav ul {
		display: flex;
	}
	
	nav li a {
		color: black;
	}

	nav li a:hover:not(.current) {
		font-weight: bold;
		text-decoration-line: underline;
		text-decoration-thickness: 2px;
		text-underline-offset: 6px;
	}

	nav .current {
		background-color: var(--bleuclair);
		color: white;
	}
	
	nav .bars {
		display: none;
	}
	
	body {
		background-color: var(--bleufonce);
	}
		
	.presentation{
		background-color: white;
		width: 1024px;
		border-left-style:solid;
		border-right-style:solid;
		border-color: white;
	}
	
	#base_presentation{
		padding: 5px 15px;
	}
	
	#base_presentation p{
		padding-top: 15px;
	}
	
	.missionMain ul{
		width: 1024px;
		background-color: white;
	}
	
	.subCategory li {
		padding: 10px 15px;
	}

	.clubMain{
		display: flex;
	}
	
	#map{
		padding-top: 5px;
	}
	
	#mapid {
		flex: 2;
	}
} 

